Sync all content

--- a/content/resources/6-844s03-th.md
+++ b/content/resources/6-844s03-th.md
@@ -13,4 +13,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 6-844s03-th.jpg
 uid: bd9c25aa-b282-9a8d-00f1-39b0614273f2
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
