--- a/content/resources/6-844s03.md
+++ b/content/resources/6-844s03.md
@@ -13,4 +13,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 6-844s03.jpg
 uid: d7acdb88-2fa7-c571-182f-8e94d1ce7f43
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
