--- a/content/resources/6-844s03-th.md
+++ b/content/resources/6-844s03-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-844-computability-theory-of-and-with-scheme-spring-2003/bd9c25aab2829a8d00f139b0614273f2_6-844s03-th.jpg
+file: /media/courses/6-844-computability-theory-of-and-with-scheme-spring-2003/bd9c25aab2829a8d00f139b0614273f2_6-844s03-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "MIT/GNU Scheme Logo.\_(Image courtesy of Harold Abelson and\_Gerald Sussman.)"
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: A circular seal with Massachusetts Institute of Technology wrapping around
     a shield with an infinitely nested function.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 6-844s03-th.jpg
@@ -18,3 +19,4 @@ video_files:
 video_metadata:
   youtube_id: null
 ---
+New image Upload
