--- a/content/resources/6-844s03.md
+++ b/content/resources/6-844s03.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-844-computability-theory-of-and-with-scheme-spring-2003/d7acdb882fa7c571182f8e94d1ce7f43_6-844s03.jpg
+file: /media/courses/6-844-computability-theory-of-and-with-scheme-spring-2003/d7acdb882fa7c571182f8e94d1ce7f43_6-844s03.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "MIT/GNU Scheme Logo.\_(Image courtesy of Harold Abelson and\_Gerald Sussman.)"
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: A circular seal with Massachusetts Institute of Technology wrapping around
     a shield with an infinitely nested function.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 6-844s03.jpg
